--- a/stack.yaml
+++ b/stack.yaml
@@ -1,8 +1,10 @@
 resolver: lts-8.19
 
 packages:
-  - blockchain
-  - blockchain-network
+  - .
+  - location:
+      git: git@github.com:TGOlson/blockchain.git
+      commit: master
 
 extra-deps:
   - QuickCheck-2.10.0.1 # current stackage version has bug in "once" function
